# fluke

./: .gitignore  .replit  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  install.bat  replit.nix  run.bat
bench/: Makefile
public/: index.html
public/css/: style.css
public/js/: script.js
src/: main.cpp  message.cpp  message.hpp  server.cpp  server.hpp  uci.cpp  uci.hpp
src/engine/: attack.cpp  attack.hpp  board.cpp  board.hpp  engine.cpp  engine.hpp  piece.cpp  piece.hpp  table.cpp  table.hpp
src/util/: AsyncFileReader.h  AsyncFileStreamer.h  Middleware.h
